--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ isort = "^5.12.0"
 mypy = "^0.991"
 flake8 = "^7.1.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
+
 [tool.black]
 line-length = 119
 exclude = '''
