--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.lint.dependencies]
 black = "^23.3.0"
