--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 
 # API-ключи
 API_KEY=your_api_key_here
+currency_api_key=your_api_key_from_api.apilayer.com
+stock_api_key=your_api_key_from_financialmodelingprep.com
